src/ENVCAP/Parser/Happy.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.3 from src/ENVCAP/Parser/Happy.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_sourceParser -> Program                     (0)
	Program -> Statements                              (1)
	Statements -> Term ';' Statements                  (2)
	Statements -> Term                                 (3)
	Term -> '?'                                        (4)
	Term -> Function                                   (5)
	Term -> Application                                (6)
	Term -> Bool                                       (7)
	Term -> int                                        (8)
	Term -> var                                        (9)
	Term -> ArithmeticOp                               (10)
	Term -> ComparisonOp                               (11)
	Term -> BooleanOp                                  (12)
	Term -> Binding                                    (13)
	Term -> IfThenElse                                 (14)
	Term -> Parens                                     (15)
	Term -> error                                      (16)
	Type -> 'Int'                                      (17)
	Type -> 'Bool'                                     (18)
	Type -> 'String'                                   (19)
	Type -> Type '->' Type                             (20)
	Type -> Type '&' Type                              (21)
	Type -> '[' Type ']'                               (22)
	Type -> '{' var ':' Type '}'                       (23)
	ParamList -> Param ',' ParamList                   (24)
	ParamList -> Param                                 (25)
	Param -> var ':' Type                              (26)
	ComparisonOp -> Term '>=' Term                     (27)
	ComparisonOp -> Term '>' Term                      (28)
	ComparisonOp -> Term '==' Term                     (29)
	ComparisonOp -> Term '!=' Term                     (30)
	ComparisonOp -> Term '<' Term                      (31)
	ComparisonOp -> Term '<=' Term                     (32)
	BooleanOp -> Term '&&' Term                        (33)
	BooleanOp -> Term '||' Term                        (34)
	ArithmeticOp -> Term '+' Term                      (35)
	ArithmeticOp -> Term '-' Term                      (36)
	ArithmeticOp -> Term '*' Term                      (37)
	ArithmeticOp -> Term '/' Term                      (38)
	ArithmeticOp -> Term '%' Term                      (39)
	Arguments -> Term ',' Arguments                    (40)
	Arguments -> Term                                  (41)
	Application -> var '(' Arguments ')'               (42)
	Bool -> 'False'                                    (43)
	Bool -> 'True'                                     (44)
	Function -> 'function' var '(' ParamList ')' '{' Statements '}'   (45)
	Binding -> 'def' var '=' Term                      (46)
	Parens -> '(' Term ')'                             (47)
	CurlyParens -> '{' Statements '}'                  (48)
	IfThenElse -> 'if' Parens 'then' CurlyParens 'else' CurlyParens   (49)
	IfThenElse -> 'if' Parens 'then' CurlyParens       (50)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { TokenInt $$ }
	var            { TokenVar $$ }
	'if'           { TokenIf }
	'then'         { TokenThen }
	'else'         { TokenElse }
	'def'          { TokenDefine }
	'False'        { TokenFalse }
	'True'         { TokenTrue }
	'function'     { TokenFunc }
	'Int'          { TokenTypeInt }
	'Bool'         { TokenTypeBool }
	'String'       { TokenTypeString }
	'->'           { TokenTypeArrow }
	'&'            { TokenTypeAnd }
	'['            { TokenOpenSqBracket }
	']'            { TokenCloseSqBracket }
	','            { TokenComma }
	'+'            { TokenPlus }
	'-'            { TokenMinus }
	'*'            { TokenTimes }
	'/'            { TokenDiv }
	'%'            { TokenMod }
	'('            { TokenOB }
	')'            { TokenCB }
	'?'            { TokenQuery }
	'>='           { TokenGe }
	'>'            { TokenGt }
	'=='           { TokenEql }
	'!='           { TokenNeq }
	'<'            { TokenLt }
	'<='           { TokenLe }
	'&&'           { TokenAnd }
	'||'           { TokenOr }
	';'            { TokenSemicolon }
	':'            { TokenColon }
	'='            { TokenEq }
	'{'            { TokenOpenBracket }
	'}'            { TokenCloseBracket }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_sourceParser rule  0
	Program         rule  1
	Statements      rules 2, 3
	Term            rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	Type            rules 17, 18, 19, 20, 21, 22, 23
	ParamList       rules 24, 25
	Param           rule  26
	ComparisonOp    rules 27, 28, 29, 30, 31, 32
	BooleanOp       rules 33, 34
	ArithmeticOp    rules 35, 36, 37, 38, 39
	Arguments       rules 40, 41
	Application     rule  42
	Bool            rules 43, 44
	Function        rule  45
	Binding         rule  46
	Parens          rule  47
	CurlyParens     rule  48
	IfThenElse      rules 49, 50

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_sourceParser -> . Program                    (rule 0)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Program        goto state 23
	Statements     goto state 2
	Term           goto state 3
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 1

	Program -> . Statements                             (rule 1)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Statements     goto state 2
	Term           goto state 3
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 2

	Program -> Statements .                             (rule 1)

	%eof           reduce using rule 1


State 3

	Statements -> Term . ';' Statements                 (rule 2)
	Statements -> Term .                                (rule 3)
	ComparisonOp -> Term . '>=' Term                    (rule 27)
	ComparisonOp -> Term . '>' Term                     (rule 28)
	ComparisonOp -> Term . '==' Term                    (rule 29)
	ComparisonOp -> Term . '!=' Term                    (rule 30)
	ComparisonOp -> Term . '<' Term                     (rule 31)
	ComparisonOp -> Term . '<=' Term                    (rule 32)
	BooleanOp -> Term . '&&' Term                       (rule 33)
	BooleanOp -> Term . '||' Term                       (rule 34)
	ArithmeticOp -> Term . '+' Term                     (rule 35)
	ArithmeticOp -> Term . '-' Term                     (rule 36)
	ArithmeticOp -> Term . '*' Term                     (rule 37)
	ArithmeticOp -> Term . '/' Term                     (rule 38)
	ArithmeticOp -> Term . '%' Term                     (rule 39)

	'+'            shift, and enter state 29
	'-'            shift, and enter state 30
	'*'            shift, and enter state 31
	'/'            shift, and enter state 32
	'%'            shift, and enter state 33
	'>='           shift, and enter state 34
	'>'            shift, and enter state 35
	'=='           shift, and enter state 36
	'!='           shift, and enter state 37
	'<'            shift, and enter state 38
	'<='           shift, and enter state 39
	'&&'           shift, and enter state 40
	'||'           shift, and enter state 41
	';'            shift, and enter state 42
	'}'            reduce using rule 3
	%eof           reduce using rule 3


State 4

	Term -> ComparisonOp .                              (rule 11)

	','            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'*'            reduce using rule 11
	'/'            reduce using rule 11
	'%'            reduce using rule 11
	')'            reduce using rule 11
	'>='           reduce using rule 11
	'>'            reduce using rule 11
	'=='           reduce using rule 11
	'!='           reduce using rule 11
	'<'            reduce using rule 11
	'<='           reduce using rule 11
	'&&'           reduce using rule 11
	'||'           reduce using rule 11
	';'            reduce using rule 11
	'}'            reduce using rule 11
	%eof           reduce using rule 11


State 5

	Term -> BooleanOp .                                 (rule 12)

	','            reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'*'            reduce using rule 12
	'/'            reduce using rule 12
	'%'            reduce using rule 12
	')'            reduce using rule 12
	'>='           reduce using rule 12
	'>'            reduce using rule 12
	'=='           reduce using rule 12
	'!='           reduce using rule 12
	'<'            reduce using rule 12
	'<='           reduce using rule 12
	'&&'           reduce using rule 12
	'||'           reduce using rule 12
	';'            reduce using rule 12
	'}'            reduce using rule 12
	%eof           reduce using rule 12


State 6

	Term -> ArithmeticOp .                              (rule 10)

	','            reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'*'            reduce using rule 10
	'/'            reduce using rule 10
	'%'            reduce using rule 10
	')'            reduce using rule 10
	'>='           reduce using rule 10
	'>'            reduce using rule 10
	'=='           reduce using rule 10
	'!='           reduce using rule 10
	'<'            reduce using rule 10
	'<='           reduce using rule 10
	'&&'           reduce using rule 10
	'||'           reduce using rule 10
	';'            reduce using rule 10
	'}'            reduce using rule 10
	%eof           reduce using rule 10


State 7

	Term -> Application .                               (rule 6)

	','            reduce using rule 6
	'+'            reduce using rule 6
	'-'            reduce using rule 6
	'*'            reduce using rule 6
	'/'            reduce using rule 6
	'%'            reduce using rule 6
	')'            reduce using rule 6
	'>='           reduce using rule 6
	'>'            reduce using rule 6
	'=='           reduce using rule 6
	'!='           reduce using rule 6
	'<'            reduce using rule 6
	'<='           reduce using rule 6
	'&&'           reduce using rule 6
	'||'           reduce using rule 6
	';'            reduce using rule 6
	'}'            reduce using rule 6
	%eof           reduce using rule 6


State 8

	Term -> Bool .                                      (rule 7)

	','            reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'*'            reduce using rule 7
	'/'            reduce using rule 7
	'%'            reduce using rule 7
	')'            reduce using rule 7
	'>='           reduce using rule 7
	'>'            reduce using rule 7
	'=='           reduce using rule 7
	'!='           reduce using rule 7
	'<'            reduce using rule 7
	'<='           reduce using rule 7
	'&&'           reduce using rule 7
	'||'           reduce using rule 7
	';'            reduce using rule 7
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 9

	Term -> Function .                                  (rule 5)

	','            reduce using rule 5
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'*'            reduce using rule 5
	'/'            reduce using rule 5
	'%'            reduce using rule 5
	')'            reduce using rule 5
	'>='           reduce using rule 5
	'>'            reduce using rule 5
	'=='           reduce using rule 5
	'!='           reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'&&'           reduce using rule 5
	'||'           reduce using rule 5
	';'            reduce using rule 5
	'}'            reduce using rule 5
	%eof           reduce using rule 5


State 10

	Term -> Binding .                                   (rule 13)

	','            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'*'            reduce using rule 13
	'/'            reduce using rule 13
	'%'            reduce using rule 13
	')'            reduce using rule 13
	'>='           reduce using rule 13
	'>'            reduce using rule 13
	'=='           reduce using rule 13
	'!='           reduce using rule 13
	'<'            reduce using rule 13
	'<='           reduce using rule 13
	'&&'           reduce using rule 13
	'||'           reduce using rule 13
	';'            reduce using rule 13
	'}'            reduce using rule 13
	%eof           reduce using rule 13


State 11

	Term -> Parens .                                    (rule 15)

	','            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'*'            reduce using rule 15
	'/'            reduce using rule 15
	'%'            reduce using rule 15
	')'            reduce using rule 15
	'>='           reduce using rule 15
	'>'            reduce using rule 15
	'=='           reduce using rule 15
	'!='           reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	';'            reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 12

	Term -> IfThenElse .                                (rule 14)

	','            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'*'            reduce using rule 14
	'/'            reduce using rule 14
	'%'            reduce using rule 14
	')'            reduce using rule 14
	'>='           reduce using rule 14
	'>'            reduce using rule 14
	'=='           reduce using rule 14
	'!='           reduce using rule 14
	'<'            reduce using rule 14
	'<='           reduce using rule 14
	'&&'           reduce using rule 14
	'||'           reduce using rule 14
	';'            reduce using rule 14
	'}'            reduce using rule 14
	%eof           reduce using rule 14


State 13

	Term -> error .                                     (rule 16)

	','            reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'*'            reduce using rule 16
	'/'            reduce using rule 16
	'%'            reduce using rule 16
	')'            reduce using rule 16
	'>='           reduce using rule 16
	'>'            reduce using rule 16
	'=='           reduce using rule 16
	'!='           reduce using rule 16
	'<'            reduce using rule 16
	'<='           reduce using rule 16
	'&&'           reduce using rule 16
	'||'           reduce using rule 16
	';'            reduce using rule 16
	'}'            reduce using rule 16
	%eof           reduce using rule 16


State 14

	Term -> int .                                       (rule 8)

	','            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'*'            reduce using rule 8
	'/'            reduce using rule 8
	'%'            reduce using rule 8
	')'            reduce using rule 8
	'>='           reduce using rule 8
	'>'            reduce using rule 8
	'=='           reduce using rule 8
	'!='           reduce using rule 8
	'<'            reduce using rule 8
	'<='           reduce using rule 8
	'&&'           reduce using rule 8
	'||'           reduce using rule 8
	';'            reduce using rule 8
	'}'            reduce using rule 8
	%eof           reduce using rule 8


State 15

	Term -> var .                                       (rule 9)
	Application -> var . '(' Arguments ')'              (rule 42)

	','            reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'*'            reduce using rule 9
	'/'            reduce using rule 9
	'%'            reduce using rule 9
	'('            shift, and enter state 28
	')'            reduce using rule 9
	'>='           reduce using rule 9
	'>'            reduce using rule 9
	'=='           reduce using rule 9
	'!='           reduce using rule 9
	'<'            reduce using rule 9
	'<='           reduce using rule 9
	'&&'           reduce using rule 9
	'||'           reduce using rule 9
	';'            reduce using rule 9
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 16

	IfThenElse -> 'if' . Parens 'then' CurlyParens 'else' CurlyParens    (rule 49)
	IfThenElse -> 'if' . Parens 'then' CurlyParens      (rule 50)

	'('            shift, and enter state 21

	Parens         goto state 27

State 17

	Binding -> 'def' . var '=' Term                     (rule 46)

	var            shift, and enter state 26


State 18

	Bool -> 'False' .                                   (rule 43)

	','            reduce using rule 43
	'+'            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'/'            reduce using rule 43
	'%'            reduce using rule 43
	')'            reduce using rule 43
	'>='           reduce using rule 43
	'>'            reduce using rule 43
	'=='           reduce using rule 43
	'!='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'&&'           reduce using rule 43
	'||'           reduce using rule 43
	';'            reduce using rule 43
	'}'            reduce using rule 43
	%eof           reduce using rule 43


State 19

	Bool -> 'True' .                                    (rule 44)

	','            reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'%'            reduce using rule 44
	')'            reduce using rule 44
	'>='           reduce using rule 44
	'>'            reduce using rule 44
	'=='           reduce using rule 44
	'!='           reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'&&'           reduce using rule 44
	'||'           reduce using rule 44
	';'            reduce using rule 44
	'}'            reduce using rule 44
	%eof           reduce using rule 44


State 20

	Function -> 'function' . var '(' ParamList ')' '{' Statements '}'    (rule 45)

	var            shift, and enter state 25


State 21

	Parens -> '(' . Term ')'                            (rule 47)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 24
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 22

	Term -> '?' .                                       (rule 4)

	','            reduce using rule 4
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'*'            reduce using rule 4
	'/'            reduce using rule 4
	'%'            reduce using rule 4
	')'            reduce using rule 4
	'>='           reduce using rule 4
	'>'            reduce using rule 4
	'=='           reduce using rule 4
	'!='           reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'&&'           reduce using rule 4
	'||'           reduce using rule 4
	';'            reduce using rule 4
	'}'            reduce using rule 4
	%eof           reduce using rule 4


State 23

	%start_sourceParser -> Program .                    (rule 0)

	%eof           accept


State 24

	ComparisonOp -> Term . '>=' Term                    (rule 27)
	ComparisonOp -> Term . '>' Term                     (rule 28)
	ComparisonOp -> Term . '==' Term                    (rule 29)
	ComparisonOp -> Term . '!=' Term                    (rule 30)
	ComparisonOp -> Term . '<' Term                     (rule 31)
	ComparisonOp -> Term . '<=' Term                    (rule 32)
	BooleanOp -> Term . '&&' Term                       (rule 33)
	BooleanOp -> Term . '||' Term                       (rule 34)
	ArithmeticOp -> Term . '+' Term                     (rule 35)
	ArithmeticOp -> Term . '-' Term                     (rule 36)
	ArithmeticOp -> Term . '*' Term                     (rule 37)
	ArithmeticOp -> Term . '/' Term                     (rule 38)
	ArithmeticOp -> Term . '%' Term                     (rule 39)
	Parens -> '(' Term . ')'                            (rule 47)

	'+'            shift, and enter state 29
	'-'            shift, and enter state 30
	'*'            shift, and enter state 31
	'/'            shift, and enter state 32
	'%'            shift, and enter state 33
	')'            shift, and enter state 62
	'>='           shift, and enter state 34
	'>'            shift, and enter state 35
	'=='           shift, and enter state 36
	'!='           shift, and enter state 37
	'<'            shift, and enter state 38
	'<='           shift, and enter state 39
	'&&'           shift, and enter state 40
	'||'           shift, and enter state 41


State 25

	Function -> 'function' var . '(' ParamList ')' '{' Statements '}'    (rule 45)

	'('            shift, and enter state 61


State 26

	Binding -> 'def' var . '=' Term                     (rule 46)

	'='            shift, and enter state 60


State 27

	IfThenElse -> 'if' Parens . 'then' CurlyParens 'else' CurlyParens    (rule 49)
	IfThenElse -> 'if' Parens . 'then' CurlyParens      (rule 50)

	'then'         shift, and enter state 59


State 28

	Application -> var '(' . Arguments ')'              (rule 42)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 57
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Arguments      goto state 58
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 29

	ArithmeticOp -> Term '+' . Term                     (rule 35)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 56
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 30

	ArithmeticOp -> Term '-' . Term                     (rule 36)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 55
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 31

	ArithmeticOp -> Term '*' . Term                     (rule 37)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 54
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 32

	ArithmeticOp -> Term '/' . Term                     (rule 38)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 53
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 33

	ArithmeticOp -> Term '%' . Term                     (rule 39)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 52
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 34

	ComparisonOp -> Term '>=' . Term                    (rule 27)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 51
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 35

	ComparisonOp -> Term '>' . Term                     (rule 28)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 50
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 36

	ComparisonOp -> Term '==' . Term                    (rule 29)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 49
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 37

	ComparisonOp -> Term '!=' . Term                    (rule 30)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 48
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 38

	ComparisonOp -> Term '<' . Term                     (rule 31)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 47
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 39

	ComparisonOp -> Term '<=' . Term                    (rule 32)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 46
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 40

	BooleanOp -> Term '&&' . Term                       (rule 33)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 45
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 41

	BooleanOp -> Term '||' . Term                       (rule 34)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Term           goto state 44
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 42

	Statements -> Term ';' . Statements                 (rule 2)

	error          shift, and enter state 13
	int            shift, and enter state 14
	var            shift, and enter state 15
	'if'           shift, and enter state 16
	'def'          shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'function'     shift, and enter state 20
	'('            shift, and enter state 21
	'?'            shift, and enter state 22

	Statements     goto state 43
	Term           goto state 3
	ComparisonOp   goto state 4
	BooleanOp      goto state 5
	ArithmeticOp   goto state 6
	Application    goto state 7
	Bool           goto state 8
	Function       goto state 9
	Binding        goto state 10
	Parens         goto state 11
	IfThenElse     goto state 12

State 43

	Statements -> Term ';' Statements .                 (rule 2)

	'}'            reduce using rule 2
	%eof           reduce using rule 2


State 44

	ComparisonOp -> Term . '>=' Term                    (rule 27)
	ComparisonOp -> Term . '>' Term                     (rule 28)
	ComparisonOp -> Term . '==' Term                    (rule 29)
	ComparisonOp -> Term . '!=' Term                    (rule 30)
	ComparisonOp -> Term . '<' Term                     (rule 31)
	ComparisonOp -> Term . '<=' Term                    (rule 32)
	BooleanOp -> Term . '&&' Term                       (rule 33)
	BooleanOp -> Term . '||' Term                       (rule 34)
	BooleanOp -> Term '||' Term .                       (rule 34)
	ArithmeticOp -> Term . '+' Term                     (rule 35)
	ArithmeticOp -> Term . '-' Term                     (rule 36)
	ArithmeticOp -> Term . '*' Term                     (rule 37)
	ArithmeticOp -> Term . '/' Term                     (rule 38)
	ArithmeticOp -> Term . '%' Term                     (rule 39)

	','            reduce using rule 34
	'+'            shift, and enter state 29
	'-'            shift, and enter state 30
	'*'            shift, and enter state 31
	'/'            shift, and enter state 32
	'%'            shift, and enter state 33
	')'            reduce using rule 34
	'>='           shift, and enter state 34
	'>'            shift, and enter state 35
	'=='           shift, and enter state 36
	'!='           shift, and enter state 37
	'<'            shift, and enter state 38
	'<='           shift, and enter state 39
	'&&'           shift, and enter state 40
	'||'           reduce using rule 34
	';'            reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 45

	ComparisonOp -> Term . '>=' Term                    (rule 27)
	ComparisonOp -> Term . '>' Term                     (rule 28)
	ComparisonOp -> Term . '==' Term                    (rule 29)
	ComparisonOp -> Term . '!=' Term                    (rule 30)
	ComparisonOp -> Term . '<' Term                     (rule 31)
	ComparisonOp -> Term . '<=' Term                    (rule 32)
	BooleanOp -> Term . '&&' Term                       (rule 33)
	BooleanOp -> Term '&&' Term .                       (rule 33)
	BooleanOp -> Term . '||' Term                       (rule 34)
	ArithmeticOp -> Term . '+' Term                     (rule 35)
	ArithmeticOp -> Term . '-' Term                     (rule 36)
	ArithmeticOp -> Term . '*' Term                     (rule 37)
	ArithmeticOp -> Term . '/' Term                     (rule 38)
	ArithmeticOp -> Term . '%' Term                     (rule 39)
